--- a/_cutups/index.html
+++ b/_cutups/index.html
@@ -96,6 +96,14 @@
                 А главное – переезд будет стоить недорого.</p>
             <p class="info__text">Чтобы оформить Ваш переезд, закажите обратный звонок
                 в один клик.</p>
+            <div class="info__hide">
+                <p class="info__text">Наша компания по доставке грузов присутствует на крупном рынке в сфере транспортных
+                    услуг с 2009 года. За
+                    этот период, нам как грузовой компании удалось накопить отличный колоссальный а так же практический опыт
+                    в организации грузоперевозках по Киеву. При любом весе, габаритах и хрупкости вашего груза, мы уверяем
+                    Вас в том, что мы доставим его в указанное место в целости и в кратчайшие сроки.
+                </p>
+            </div>
             <a href="#" class="info__link">Узнать больше</a>
             <a href="#" class="button info__button">Заказать звонок</a>
             <p class="info__text info__text--hidden">Наша компания по доставке грузов присутствует на крупном рынке в сфере транспортных
@@ -104,6 +112,14 @@
                 в организации грузоперевозках по Киеву. При любом весе, габаритах и хрупкости вашего груза, мы уверяем
                 Вас в том, что мы доставим его в указанное место в целости и в кратчайшие сроки.
             </p>
+            <div class="info__hide">
+                <p class="info__text">Наша компания по доставке грузов присутствует на крупном рынке в сфере транспортных
+                    услуг с 2009 года. За
+                    этот период, нам как грузовой компании удалось накопить отличный колоссальный а так же практический опыт
+                    в организации грузоперевозках по Киеву. При любом весе, габаритах и хрупкости вашего груза, мы уверяем
+                    Вас в том, что мы доставим его в указанное место в целости и в кратчайшие сроки.
+                </p>
+            </div>
             <a href="#" class="info__link info__text--hidden">Узнать больше</a>
         </div>
         <div class="info__col">
@@ -122,6 +138,14 @@
                 и оборудования.</p>
             <p class="info__text info__text--hidden">Обратившись, в нашу транспортную компанию, которая длительное время уверенно и надежно
                 выполняет услуги по грузоперевозкам, Краун Карс – лучший выбор для переезда в Киеве!</p>
+            <div class="info__hide">
+                <p class="info__text">Наша компания по доставке грузов присутствует на крупном рынке в сфере транспортных
+                    услуг с 2009 года. За
+                    этот период, нам как грузовой компании удалось накопить отличный колоссальный а так же практический опыт
+                    в организации грузоперевозках по Киеву. При любом весе, габаритах и хрупкости вашего груза, мы уверяем
+                    Вас в том, что мы доставим его в указанное место в целости и в кратчайшие сроки.
+                </p>
+            </div>
             <a href="#" class="info__link">Узнать больше</a>
             <a href="#" class="button">Заказать звонок</a>
         </div>
