--- a/_cutups/bus.html
+++ b/_cutups/bus.html
@@ -37,6 +37,17 @@
                 </nav>
             </div>
         </div>
+        <ul class="main__nav">
+            <li class="main__nav-item"><a href="#" class="main__nav-link main__nav--active">Грузоперевозки</a></li>
+            <div class="mobile_wrap">
+                <li class="main__nav-item nav-link"><a href="#" class="main__nav-link">Квартирный переезд</a></li>
+                <li class="main__nav-item nav-link"><a href="#" class="main__nav-link">Офисный переезд</a></li>
+                <li class="main__nav-item nav-link"><a href="#" class="main__nav-link">Грузовое такси</a></li>
+                <li class="main__nav-item nav-link"><a href="#" class="main__nav-link">Грузовое такси</a></li>
+                <li class="main__nav-item nav-link"><a href="#" class="main__nav-link ">Пассажирские перевозки</a></li>
+                <li class="main__nav-item nav-link"><a href="#" class="main__nav-link ">Вывоз строймусора</a></li>
+            </div>
+        </ul>
     </div>
 </header>
 <main class="main bus">
