--- a/_cutups/index.html
+++ b/_cutups/index.html
@@ -91,7 +91,7 @@
             <p class="info__text">Вам надо перевезти груз в Киеве? Краун-Карс – идеальное решение. Ми предлагаем все
                 виды грузоперевозок: квартирный переезд, офисный переезд, грузовое такси, услуги грузчиков, пассажирские
                 перевозки. </p>
-            <p class="info__text">У нас опытные менеджеры, неутомимые грузчики, трезвые водители. Краун Карс – это
+            <p class="info__text">У нас опытные менеджеры, неутомимые грузчики, трезвые водители. Грузоперевозки "Из точки в точку" в г. Киев – это
                 быстрая и бережная доставка вашего груза, а также большой автопарк, от 1,5 до 20 тонн.
                 А главное – переезд будет стоить недорого.</p>
             <p class="info__text">Чтобы оформить Ваш переезд, закажите обратный звонок
@@ -124,7 +124,7 @@
         </div>
         <div class="info__col">
             <h2 class="info__title">Профессиональные грузоперевозки по Киеву: быстро, аккуратно, недорого!</h2>
-            <p class="info__text">Краун Карс располагает для Вас огромным парком современной автотехники. Все наши
+            <p class="info__text">Грузоперевозки "Из точки в точку" в г. Киев располагает для Вас огромным парком современной автотехники. Все наши
                 машины специально оборудованы для грузоперевозок. Отдельное внимание заслуживают наши грузчики, которые
                 относятся к имуществу нашего заказчика с ответственностью. Наши грузчики имеют высокую квалификацию в
                 своем деле, строго соблюдают все правила по безопасности, оставляя после себя идеальный порядок на
@@ -137,7 +137,7 @@
                 У Вас же на месте мы определим необходимость в использовании конкретного транспортировочного инструмента
                 и оборудования.</p>
             <p class="info__text info__text--hidden">Обратившись, в нашу транспортную компанию, которая длительное время уверенно и надежно
-                выполняет услуги по грузоперевозкам, Краун Карс – лучший выбор для переезда в Киеве!</p>
+                выполняет услуги по грузоперевозкам, Грузоперевозки "Из точки в точку" в г. Киев – лучший выбор для переезда в Киеве!</p>
             <div class="info__hide">
                 <p class="info__text">Наша компания по доставке грузов присутствует на крупном рынке в сфере транспортных
                     услуг с 2009 года. За
@@ -153,7 +153,7 @@
 </div>
 <div class="advantages">
     <div class="wrapper">
-        <h3 class="section-title advantages__title">Преимущества перевозки<br> грузов компанией Краун Карс</h3>
+        <h3 class="section-title advantages__title">Преимущества перевозки<br> грузов компанией Грузоперевозки "Из точки в точку" в г. Киев</h3>
         <ul class="advantages__items">
             <li class="advantages__item advantages__item1">Большой выбор машин любого тоннажа</li>
             <li class="advantages__item advantages__item2">Доступные цены на перевозку грузов</li>
@@ -234,7 +234,7 @@
                 <button class="button form-button">Заказать звонок</button>
             </form>
             <div class="footer__info">
-                <p class="footer__info-title">Краун Карс<br>
+                <p class="footer__info-title">Грузоперевозки "Из точки в точку" в г. Киев<br>
                     Мы работаем без выходных.<br>
                     Прием заказов с 7:00 до 23:00</p>
                 <p class="footer__info-block">
