--- a/_cutups/tip.html
+++ b/_cutups/tip.html
@@ -158,7 +158,7 @@
                 <button class="button form-button">Заказать звонок</button>
             </form>
             <div class="footer__info">
-                <p class="footer__info-title">Краун Карс<br>
+                <p class="footer__info-title">Грузоперевозки "Из точки в точку" в г. Киев<br>
                     Мы работаем без выходных.<br>
                     Прием заказов с 7:00 до 23:00</p>
                 <p class="footer__info-block">
